service/gateway/build/deployment-uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: gateway-uat
    app: gateway
    environment: uat
    namespace: default
  name: gateway-uat
  namespace: default
spec:
  strategy:
    type: RollingUpdate
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      name: gateway-uat
  template:
    metadata:
      labels:
        name: gateway-uat
        app: gateway
        environment: uat
        namespace: default
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: gateway-sa
      containers:
        - image: docker.io/kubernetes-poc/gateway:uat
          imagePullPolicy: IfNotPresent
          name: gateway-uat
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              port: http
              path: /health
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: http
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
          startupProbe:
            httpGet:
              port: http
              path: /health
            failureThreshold: 30
            periodSeconds: 5
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 300m
              memory: 300Mi
