service/gateway/build/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: gateway-prod
    app: gateway
    environment: prod
    namespace: default
  name: gateway-prod
  namespace: default
spec:
  ports:
    - name: http
      appProtocol: http
      port: 8000
      targetPort: http
  selector:
    name: gateway-prod
