service/gateway/build/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: gateway
    app: gateway
    namespace: default
  name: gateway
  namespace: default
spec:
  ports:
    - name: http
      appProtocol: http
      port: 8000
      targetPort: http
  selector:
    app: gateway
