service/gateway/build/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway
  namespace: default
spec:
  hosts:
    - gateway.default.svc.cluster.local
  http:
    - match:
        - port: 8000
      route:
        - destination:
            host: gateway.default.svc.cluster.local
            port:
              number: 8000
      retries:
        attempts: 3
        perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gateway
spec:
  host: gateway.default.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 3
      http:
        maxRequestsPerConnection: 10
